[project]
name = "browse-analyze-download"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.2.0",
    "ydata-profiling>=4.6.0",
    "openpyxl>=3.1.2",
    "setuptools>=68.0.0"
]

[tool.uv]
package = false
